1. 좌측메뉴 - 계정설정 팝업 작업 2. My Profile 화면 작업 o# Your branch is up T#o date with 'origin/main'.

--- a/base/html/common/gnb.html
+++ b/base/html/common/gnb.html
@@ -148,10 +148,17 @@
 </div>
 <!-- //menu -->
 <aside class="aside">
-  <button type="button" class="btn-bell" data-target="">알림</button>
-  <button type="button" class="btn-m" data-target="">계정설정</button>
+  <!-- active 클래스 추가시 red아이콘 표시 -->
+  <button type="button" class="btn-bell active">알림</button>
+  <button type="button" class="btn-m">계정설정</button>
   <div class="current-time">
     <span>23. 05. 01</span>
     <span>11:09:22</span>
   </div>
+  <div class="pop-user-info">
+    <em class="tit">Manager</em>
+    <a href="#" class="user-edit">프로필 수정</a>
+    <a href="#" class="user-logout">로그아웃</a>
+  </div>
+  <!-- //pop-user-info -->
 </aside>
