My Profile화면: 테이블 colgroup 추가

--- a/base/html/profile_edit.html
+++ b/base/html/profile_edit.html
@@ -26,6 +26,10 @@
               <h3>관리자 정보</h3>
               <div class="data-tbl view2">
                 <table>
+                  <colgroup>
+                    <col style="width: 12.6rem" />
+                    <col />
+                  </colgroup>
                   <tbody>
                     <tr>
                       <th>관리자 ID</th>
@@ -69,6 +73,10 @@
               <h3>비밀번호 변경</h3>
               <div class="data-tbl view2">
                 <table>
+                  <colgroup>
+                    <col style="width: 12.6rem" />
+                    <col />
+                  </colgroup>
                   <tbody>
                     <tr>
                       <th>현재 비밀번호</th>
