실시간 돌발 조회 화면 작업

--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -567,7 +567,7 @@
               <em class="tit">채널 1 - 카메라 명</em>
               <div class="bind">
                 <a href="#" class="btn-small gray">확대</a>
-                <a href="#" class="btn-small gray">번호인식</a>
+                <a href="#carnum-1" class="btn-small gray">번호인식</a>
                 <a href="#" class="btn-popup-close"><span class="screen-out">팝업 닫기</span></a>
               </div>
             </header>
@@ -806,6 +806,10 @@
             <!-- //model-traffic -->
           </div>
           <!-- //카메라 팝업 -->
+
+          <!-- 차량 번호 인식 팝업 -->
+          <div id="carnum-1" class="car-num-recog-popup">작업중..</div>
+          <!-- //차량 번호 인식 팝업 -->
         </div>
         <!-- //ly-map -->
       </main>
