1. 교차로 - 영상 확대 팝업 작업 2. 교차로 - 분할화면 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -279,6 +279,24 @@
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">교차로 상세</td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/map_crossroad_view2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 분할 화면</li>
+                            </ul>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth">프로필 수정</td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
@@ -1355,7 +1373,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/real_time_outbreak.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
