--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -566,7 +566,8 @@
             <header class="camera-popup-header">
               <em class="tit">채널 1 - 카메라 명</em>
               <div class="bind">
-                <a href="#" class="btn-small gray">확대</a>
+                <!-- 230907 수정 : 확대 버튼에 btn-modal-open 클래스 추가 및 href 속성에 팝업 id값 연결 -->
+                <a href="#channel-expand-1" class="btn-modal-open btn-small gray">확대</a>
                 <a href="#carnum-1" class="btn-small gray">번호인식</a>
                 <a href="#" class="btn-popup-close"><span class="screen-out">팝업 닫기</span></a>
               </div>
@@ -807,8 +808,26 @@
           </div>
           <!-- //카메라 팝업 -->
 
+          <!-- 230907 추가 : 카메라 확대 팝업 -->
+          <div id="channel-expand-1" class="modal expend">
+            <div class="modal-container">
+              <div class="modal-header">
+                <span class="tit">채널1 - 카메라 명</span>
+              </div>
+              <!-- //modal-header -->
+              <div class="modal-body">
+                <video autoplay loop muted width="100%" height="100%" class="expend-video">
+                  <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+                </video>
+              </div>
+              <!-- //modal-body -->
+            </div>
+            <!-- //modal-container -->
+          </div>
+          <!-- //modal -->
+
           <!-- 차량 번호 인식 팝업 -->
-          <div id="carnum-1" class="car-num-recog-popup">작업중..</div>
+          <div id="carnum-1" class="car-num-recog-popup" hidden>작업중..</div>
           <!-- //차량 번호 인식 팝업 -->
         </div>
         <!-- //ly-map -->
