교차로 유출입 교통량 화면 > 화살표 방향 및 텍스트 수정

--- a/base/html/crossroads_flow.html
+++ b/base/html/crossroads_flow.html
@@ -179,7 +179,7 @@
                       <div class="flow-stats-detail reverse">
                         <span class="arrow">
                           <button type="button" class="flow-turn right"><b class="screen-out">좌회전</b></button>
-                          <button type="button" class="flow-straight down"><b class="screen-out">직진</b></button>
+                          <button type="button" class="flow-straight up"><b class="screen-out">직진</b></button>
                           <button type="button" class="flow-turn left"><b class="screen-out">우회전</b></button>
                         </span>
                         <!-- //arrow -->
@@ -199,7 +199,7 @@
                           <em>102,174</em>
                         </span>
                         <!-- //num -->
-                        <span class="road-name"><em>도로명1</em></span>
+                        <span class="road-name"><em>도로명4</em></span>
                       </div>
                       <!-- //flow-stats-detail -->
                     </div>
